	@startuml

	'Diagramme de classes (PlantUML)'

	'Configuration charte graphique'
	hide empty methods
	hide circle
	skinparam class {
	  BackgroundColor White
	  ArrowColor Black
	  BorderColor Black
	}

	'Classes, énumérations, etc.'
	class MiniSocs {
	  - nomDuSysteme: String
	  - ajouterUtilisateur(): methode
	  - creerReseauSocial(): methode
	  - ajouterMembreRS(): methode
	  - posterMessageRS(): methode
	  - modererMessage(): methode
	  - desactiverCompteUtilisateur(): methode
	  - listerUtilisateurs(): methode
	  - listerRS(): methode
	}

	class Utilisateur {
	  - pseudonyme: String
	  - nom: String
	  - prénom: String
	  - courriel: String
	  - etatCompte: ÉtatCompte
	  - setEtatCompte(): methode
	  - bloquerCompte(): methode
	  - desactiverCompte(): methode
	}

	enum ÉtatCompte <<enum>> {
	  ACTIF
	  DÉSACTIVÉ
	  BLOQUÉ
	}

	enum ÉtatMessage <<enum>> {
	  ACCEPTÉ
	  VERIFICATION_PENDING
	  INAPPROPRIATE
	  HIDDEN
	  SENT
	}

	class Membre {
	  - pseudoParticulier: String
	  - addMessage(): method
	  - changePseudoParticulier(): method
	}

	class Moderateur {
	  - moderer(): methode
	}

	class ReseauSocial {
	  - nom: String
	  - ouvert: bool
	  - ajouterMembre(): methode
	  - ajouterMessage(): methode
	  - getMembrefromUtilisateur() : methode
	  - getMessagefromId() : methode
	}

	class Message {
	  - contenu: String
	  - etatMessage: ÉtatMessage
	  - id: double
	  - modifierStatutMessage(): methode
	  - envoyerMessage(): methode
	}

	'Associations, etc.'
	MiniSocs *--> "*" Utilisateur: Crée
	Membre "*" --> "1" Utilisateur: Lie a

	Membre "1" *-- "*" Message: Demander
        
	MiniSocs *--> "*" ReseauSocial
        ReseauSocial "1"-- "*" Message
        
	ReseauSocial "1" *-- "*" Membre

	Moderateur --|> Membre
	
	'Au besoin, aides pour le positionnement'

	@enduml
